@@ -1,0 +1,11 @@
+# HelloLucene
+
+Scala version of Lucene in 5 minutes with Lucene 7.2.1.
+
+- http://www.lucenetutorial.com/lucene-in-5-minutes.html
+
+Run `sbt` command.
+
+```bash
+$ sbt run
+```
