@@ -1,3 +1,7 @@
+2018-03-24: lucene-tutorial
+
+	* Lucene Tutorial in Scala
+
 2013-04-12: tabular-simple.py
 
 	* 行形式のデータを表形式に変換する。
